--- a/assets/style.css
+++ b/assets/style.css
@@ -220,7 +220,7 @@ h6 {
   width: 100%;
   height: 100vh;
   
-  background:url(/IMG_20220413_191559_226.jpg) ;
+  background:url(IMG_20220413_191559_226.jpg) ;
   
   background-size: cover;
 }
