--- a/assets/style.css
+++ b/assets/style.css
@@ -266,7 +266,7 @@ h6 {
 
 @media (min-width: 1024px) {
   #hero {
-    background-attachment: fixed;
+    
   }
 }
 
@@ -798,4 +798,53 @@ section {
   60% {
     transform: translateY(-15px);
   }
+}
+
+#slideshow {
+  overflow: hidden;
+  height: 305px;
+  width: 580px;
+  margin: 0 auto;
+}
+
+.slide-wrapper {
+  width: 2912px;
+  -webkit-animation: slide 8s ease infinite;
+}
+
+.slide {
+  float: left;
+  height: 310px;
+  width: 680px;
+}
+
+.slide:nth-child(1) {
+  background-image: url(/WhatsApp\ Image\ 2023-01-30\ at\ 12.00.30.jpg);
+  background-size: 100% 99%;
+
+}
+
+.slide:nth-child(2) {
+  background-image: url(/WhatsApp\ Image\ 2023-01-30\ at\ 11.57.49.jpg);
+  background-size: 92% 98%;
+}
+
+.slide:nth-child(3) {
+  background-image: url(/WhatsApp\ Image\ 2023-01-29\ at\ 23.02.12.jpg);
+  background-size: 99% 98%;
+}
+
+
+
+.slide-number {
+  color: #000;
+  text-align: center;
+  font-size: 10em;
+}
+
+@-webkit-keyframes slide {
+  20% {margin-left: 0px;}
+  30% {margin-left: -728px;}
+  50% {margin-left: -728px;}
+  60% {margin-left: -1456px;}
 }
